made it turn blue when active

--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.css
@@ -27,6 +27,10 @@
   font-size: var(--slds-g-font-size-base, 13px);
 }
 
+.citation__title--active {
+  color: var(--lwc-brandAccessible, #0176d3);
+}
+
 .citation__tooltip-text {
   display: -webkit-box;
   -webkit-line-clamp: 6;
