--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.css
@@ -31,6 +31,11 @@
   color: var(--lwc-brandAccessible, #0176d3);
 }
 
+/* Make action indicator icons blue when active */
+.citation__action-indicator {
+  --slds-c-icon-color-foreground-default: var(--lwc-brandAccessible, #0176d3);
+}
+
 .citation__tooltip-text {
   display: -webkit-box;
   -webkit-line-clamp: 6;
