POC 2 using slots and composition

--- a/packages/quantic/force-app/main/default/lwc/quanticGeneratedAnswer/templates/generatedAnswer.html
+++ b/packages/quantic/force-app/main/default/lwc/quanticGeneratedAnswer/templates/generatedAnswer.html
@@ -66,7 +66,9 @@
                     citations={citations}
                     citation-hover-handler={handleCitationHover}
                     disable-citation-anchoring={disableCitationAnchoring}
-                  ></c-quantic-source-citations>
+                  >
+                    <slot name="citation-component" slot="citation-component"></slot>
+                </c-quantic-source-citations>
                 </div>
               </template>
             </div>
