--- a/packages/atomic/scripts/generate-component-templates/component.mdx.hbs
+++ b/packages/atomic/scripts/generate-component-templates/component.mdx.hbs
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import * as {{namePascalCase}}Stories from './{{name}}.new.stories';
-import { AtomicDocTemplate } from '../../../../storybook-utils/documentation/atomic-doc-template';
+import { AtomicDocTemplate } from '@/storybook-utils/documentation/atomic-doc-template';
 
 <Meta of={ {{namePascalCase}}Stories } />
 
