chore: seed all picsum pictures

--- a/packages/create-atomic-component-project/template/src/pages/index.html
+++ b/packages/create-atomic-component-project/template/src/pages/index.html
@@ -236,7 +236,7 @@
                     }
                   </style>
                   <atomic-result-section-visual class="thumbnail">
-                    <img src="https://picsum.photos/360" />
+                    <img src="https://picsum.photos/seed/picsum/360" />
                   </atomic-result-section-visual>
 
                   <atomic-result-section-badges>
@@ -273,7 +273,7 @@
                               class="icon"
                             ></atomic-result-image>
                             <img
-                              src="https://picsum.photos/350"
+                              src="https://picsum.photos/seed/picsum/350"
                               class="thumbnail"
                             />
                           </atomic-result-section-visual>
