added new properties for citations isActive and iconName with their unit tests

--- a/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticCitation/quanticCitation.css
@@ -38,3 +38,15 @@
   color: rgb(26, 27, 30);
   cursor: default;
 }
+
+.citation__link--active {
+  border-color: var(--lwc-brandAccessible, #0176d3);
+}
+
+.citation__title--active {
+  color: var(--lwc-brandAccessible, #0176d3);
+}
+
+.citation__icon--active {
+  --slds-c-icon-color-foreground-default: var(--lwc-brandAccessible, #0176d3);
+}
