--- a/samples/atomic/search-commerce-angular/src/app/atomic-angular-search-page/atomic-angular-search-page.component.html
+++ b/samples/atomic/search-commerce-angular/src/app/atomic-angular-search-page/atomic-angular-search-page.component.html
@@ -31,7 +31,7 @@
         <atomic-numeric-facet field="sncost" label="Cost Range (auto)">
           <atomic-format-currency currency="CAD"></atomic-format-currency>
         </atomic-numeric-facet>
-        <atomic-timeframe-facet label="Timeframe" with-date-picker>
+        <!-- <atomic-timeframe-facet label="Timeframe" with-date-picker>
           <atomic-timeframe unit="hour"></atomic-timeframe>
           <atomic-timeframe unit="day"></atomic-timeframe>
           <atomic-timeframe unit="week"></atomic-timeframe>
@@ -39,7 +39,7 @@
           <atomic-timeframe unit="quarter"></atomic-timeframe>
           <atomic-timeframe unit="year"></atomic-timeframe>
           <atomic-timeframe unit="year" amount="10" period="next"></atomic-timeframe>
-        </atomic-timeframe-facet>
+        </atomic-timeframe-facet> -->
         <atomic-rating-facet field="snrating" label="Rating" number-of-intervals="5"> </atomic-rating-facet>
         <atomic-rating-range-facet
           facet-id="snrating_range"
@@ -79,7 +79,7 @@
         <atomic-notifications></atomic-notifications>
       </atomic-layout-section>
       <atomic-layout-section section="results">
-        <atomic-smart-snippet></atomic-smart-snippet>
+        <!-- <atomic-smart-snippet></atomic-smart-snippet> -->
         <atomic-smart-snippet-suggestions></atomic-smart-snippet-suggestions>
         <atomic-result-list>
           <atomic-result-template must-match-sourcetype="YouTube">
