--- a/samples/atomic/search-commerce-angular/src/app/atomic-angular-rga-page/atomic-angular-rga-page.component.html
+++ b/samples/atomic/search-commerce-angular/src/app/atomic-angular-rga-page/atomic-angular-rga-page.component.html
@@ -69,7 +69,7 @@
     <atomic-numeric-facet field="ec_price" label="Cost" withInput="integer">
       <atomic-format-currency currency="USD"></atomic-format-currency>
     </atomic-numeric-facet>
-    <atomic-timeframe-facet withDatePicker="true" label="Listed within">
+    <!-- <atomic-timeframe-facet withDatePicker="true" label="Listed within">
       <atomic-timeframe unit="hour"></atomic-timeframe>
       <atomic-timeframe unit="day"></atomic-timeframe>
       <atomic-timeframe unit="week"></atomic-timeframe>
@@ -77,7 +77,7 @@
       <atomic-timeframe unit="quarter"></atomic-timeframe>
       <atomic-timeframe unit="year"></atomic-timeframe>
       <atomic-timeframe unit="year" amount="10" period="next"></atomic-timeframe>
-    </atomic-timeframe-facet>
+    </atomic-timeframe-facet> -->
     <atomic-rating-facet field="ec_rating" label="Rating" numberOfIntervals="5"></atomic-rating-facet>
     <atomic-rating-range-facet field="ec_rating" label="Rating range" numberOfIntervals="5" facetId="ec_rating_range">
     </atomic-rating-range-facet>
