--- a/packages/atomic/src/global/global.css
+++ b/packages/atomic/src/global/global.css
@@ -1,5 +1,5 @@
-@import './tailwind.properties.css';
-@import '../utils/tailwind.global.tw.css';
+@import "./tailwind.properties.css";
+@import "../utils/tailwind.global.tw.css";
 
 @reference './tailwind.default.css';
 @reference '../utils/tailwind-utilities/utilities.css';
