--- a/packages/atomic/src/components/common/search-box/search-box.css
+++ b/packages/atomic/src/components/common/search-box/search-box.css
@@ -5,22 +5,22 @@
 }
 
 .loading::after {
-  content: '';
+  content: "";
   @apply bg-background absolute h-5/6 w-5/6 rounded-full;
 }
 
-[part='textarea-expander'] {
+[part="textarea-expander"] {
   &::after {
     /* Space needed to prevent jumpy behavior */
-    content: attr(data-replicated-value) ' ';
+    content: attr(data-replicated-value) " ";
     visibility: hidden;
   }
 
-  > [part='textarea'] {
+  > [part="textarea"] {
     @apply hide-scrollbar;
   }
 
-  > [part='textarea'],
+  > [part="textarea"],
   &::after {
     @apply text-neutral-dark z-10 h-full grow resize-none overflow-hidden bg-transparent px-4 py-3.5 text-lg whitespace-nowrap outline-none;
     /* Place on top of each other */
@@ -28,7 +28,7 @@
   }
 
   &.expanded {
-    > [part='textarea'],
+    > [part="textarea"],
     &::after {
       @apply whitespace-pre-wrap;
       @apply overflow-y-auto;
