--- a/packages/atomic/src/components/search/atomic-search-box/atomic-search-box.css
+++ b/packages/atomic/src/components/search/atomic-search-box/atomic-search-box.css
@@ -1,11 +1,11 @@
-@import '../../../global/global.css';
-@import '../../common/search-box/search-box.css';
+@import "../../../global/global.css";
+@import "../../common/search-box/search-box.css";
 
-[part~='instant-results-item'] {
+[part~="instant-results-item"] {
   @apply p-3;
 }
 
-[part~='instant-results-show-all'] {
+[part~="instant-results-show-all"] {
   @apply border-t-neutral justify-center border-t py-1;
   margin-top: auto;
   box-sizing: content-box;
@@ -14,11 +14,11 @@
   }
 }
 
-[part~='suggestions-left'] + [part~='suggestions-right'] {
+[part~="suggestions-left"] + [part~="suggestions-right"] {
   @apply border-l-neutral border-l;
 }
 
-[part~='suggestions-wrapper'] {
+[part~="suggestions-wrapper"] {
   flex-direction: column;
   @media (width >= theme(--breakpoint-desktop)) {
     flex-direction: row;
