--- a/packages/atomic/src/components/recommendations/atomic-recs-result/atomic-recs-result.pcss
+++ b/packages/atomic/src/components/recommendations/atomic-recs-result/atomic-recs-result.pcss
@@ -1,4 +1,4 @@
-@import '../../common/template-system/legacy-template-system.css';
+@import '../../common/template-system/template-system.pcss';
 
 :host {
   @apply atomic-template-system;
