--- a/packages/atomic/src/components/common/template-system/legacy-template-system.css
+++ b/packages/atomic/src/components/common/template-system/legacy-template-system.css
@@ -1,8 +1,8 @@
-@import './with-sections.pcss';
-@import './row-desktop.pcss';
-@import './row-mobile.pcss';
-@import './cell-desktop.pcss';
-@import './cell-mobile.pcss';
+@import "./with-sections.pcss";
+@import "./row-desktop.pcss";
+@import "./row-mobile.pcss";
+@import "./cell-desktop.pcss";
+@import "./cell-mobile.pcss";
 @reference '../../../utils/tailwind-utilities/aspect-square.css';
 @reference '../../../utils/tailwind-utilities/set-font-size.css';
 @reference '../../../global/global.pcss';
