fix(quantic): HIP overflows to the right issue (#6940)

--- a/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
@@ -1,7 +1,16 @@
+.tab-bar_list-container {
+  /* Prevents horizontal scrollbar from appearing when tabs overflow */
+  overflow-x: clip;
+}
+
 .tab-bar_dropdown {
   max-width: 150px;
 }
 
 .tab-bar__more-button:focus {
   text-decoration: none;
+}
+
+.tab-bar__dropdown-tab {
+  display: inline;
 }
