Flatten atomic-user-actions components directories

--- a/packages/atomic/src/components/insight/atomic-insight-user-actions-modal/atomic-insight-user-actions-modal.pcss
+++ b/packages/atomic/src/components/insight/atomic-insight-user-actions-modal/atomic-insight-user-actions-modal.pcss
@@ -1,4 +1,4 @@
-@import '../../../../global/global.pcss';
+@import '../../../global/global.pcss';
 
 /* This stylesheet can be removed once atomic-insight-user-actions-modal is migrated to lit. 
 The remaining styles can be moved to the static style attribute of the component once migrated */
