--- a/packages/atomic/src/components/insight/atomic-insight-user-actions-session/atomic-insight-user-actions-session.pcss
+++ b/packages/atomic/src/components/insight/atomic-insight-user-actions-session/atomic-insight-user-actions-session.pcss
@@ -1,4 +1,4 @@
-@import '../../../../global/global.pcss';
+@import '../../../global/global.pcss';
 
 .session-start-icon__container {
   background-color: #fbb439;
