--- a/packages/atomic/src/components/insight/atomic-insight-smart-snippet/atomic-insight-smart-snippet.pcss
+++ b/packages/atomic/src/components/insight/atomic-insight-smart-snippet/atomic-insight-smart-snippet.pcss
@@ -1,1 +1,1 @@
-@import '../../../common/smart-snippets/atomic-smart-snippet/atomic-smart-snippet.pcss';
+@import '../../common/smart-snippets/atomic-smart-snippet/atomic-smart-snippet.pcss';
