--- a/packages/atomic/src/themes/coveo.css
+++ b/packages/atomic/src/themes/coveo.css
@@ -52,6 +52,7 @@
 
   --atomic-rating-icon-active-color: #f6ce3c;
   --atomic-rating-icon-outline: none;
+  --atomic-user-session-indicator: #fbb439;
 
   --animate-slide-down-modal: slideDown 0.5s linear forwards;
   --animate-scale-up-modal: scaleUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1)
