add CSS variable for user actions timeline separator background

--- a/packages/atomic/src/themes/accessible.css
+++ b/packages/atomic/src/themes/accessible.css
@@ -59,6 +59,8 @@
   --atomic-rating-icon-active-color: #f6ce3c;
   --atomic-rating-icon-outline: none;
 
+  --atomic-user-actions-timeline-separator-background: #e0e1dd;
+
   --animate-slide-down-modal: slideDown 0.5s linear forwards;
   --animate-scale-up-modal: scaleUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1)
     forwards;
